# cantao_solax_add_on

./: CHANGELOG.md  README.md  cantao_build_backend.py  composer.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
cantao_solax_placeholder/: __init__.py
contao/config/: config.php
contao/dca/: tl_settings.php  tl_solax_metric.php
contao/languages/de/: tl_settings.php  tl_solax_metric.php
contao/languages/en/: tl_settings.php  tl_solax_metric.php
contao/sql/: tl_solax_metric.sql
docs/: integration-guide.md
examples/: config.example.toml
php-src/: CantaoSolaxBundle.php
php-src/ContaoManager/: Plugin.php
php-src/Cron/: SolaxSyncCron.php
php-src/DependencyInjection/: CantaoSolaxExtension.php  Configuration.php
php-src/Repository/: MetricRepository.php  MetricStoreResult.php
php-src/Resources/config/: services.php
php-src/Service/: FakeDataGenerator.php  MetricNormalizer.php  SolaxClient.php  SolaxConfigurationProvider.php
scripts/: install-contao.sh
src/cantao_solax_add_on/: __init__.py  api.py  cli.py  client.py  config.py  dashboard.py
tests/: test_cli.py  test_client.py  test_config.py  test_dashboard.py
