[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cantao-solax-add-on"
version = "0.1.0"
description = "CANTAO add-on for integrating Solax inverter data via the Solax Cloud API."
readme = "README.md"
authors = [
  {name = "OpenAI Assistant"}
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5.0"
]

[project.scripts]
cantao-solax = "cantao_solax_add_on.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
